--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/typography": "^0.5.1",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-collapsed": "^3.3.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
