play screen: add time remaining and progress bar

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "rules": {
     "semi":"warn",
-    "no-console":"warn",
-    
+    "no-console":"warn"
   },
   "extends": "next/core-web-vitals"
 }
