--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-collapsed": "^3.3.0",
