--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-collapsed": "^3.3.0",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "dotenv": "^16.0.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
