--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "new-quizzes-fe",
+  "proxy": "http://localhost:5000",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,7 +13,8 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-collapsed": "^3.3.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
