--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "html-react-parser": "^1.4.8",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-collapsed": "^3.3.0",
