--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "draft-js": "^0.11.7",
     "next": "12.0.10",
+    "quill": "^1.3.7",
     "react": "17.0.2",
     "react-collapsed": "^3.3.0",
     "react-dom": "17.0.2",
