--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "html-react-parser": "^1.4.8",
+    "js-base64": "^3.7.2",
     "next": "12.0.10",
     "quill": "^1.3.7",
     "react": "17.0.2",
