--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "clsx": "^1.1.1",
     "html-react-parser": "^1.4.8",
     "js-base64": "^3.7.2",
     "next": "12.0.10",
