--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-collapsed": "^3.3.0",
     "react-dom": "17.0.2",
+    "react-mathjax": "^1.0.1",
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
