--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-collapsed": "^3.3.0",
     "react-dom": "17.0.2",
     "react-mathjax": "^1.0.1",
+    "react-tex": "^1.5.0",
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
