--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.1.1",
     "html-react-parser": "^1.4.8",
     "js-base64": "^3.7.2",
+    "mathjax-full": "^3.2.0",
     "next": "12.0.10",
     "quill": "^1.3.7",
     "react": "17.0.2",
