--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   "dependencies": {
     "axios": "^0.26.1",
     "clsx": "^1.1.1",
+    "dompurify": "^2.3.8",
     "html-react-parser": "^1.4.8",
     "js-base64": "^3.7.2",
-    "mathjax-full": "^3.2.0",
     "next": "12.0.10",
     "quill": "^1.3.7",
     "react": "17.0.2",
     "react-collapsed": "^3.3.0",
     "react-dom": "17.0.2",
-    "react-mathjax": "^1.0.1",
     "react-tex": "^1.5.0",
     "socket.io-client": "^4.4.1"
   },
