--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "js-base64": "^3.7.2",
     "next": "12.0.10",
     "quill": "^1.3.7",
-    "react": "17.0.2",
+    "react": "^18.1.0",
     "react-collapsed": "^3.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.0.2",
     "react-tex": "^1.5.0",
     "socket.io-client": "^4.4.1"
