--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dompurify": "^2.3.8",
     "html-react-parser": "^1.4.8",
     "js-base64": "^3.7.2",
+    "lodash": "^4.17.21",
     "next": "12.0.10",
     "quill": "^1.3.7",
     "react": "^18.1.0",
