--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.0.2",
+    "react-sound": "^1.2.0",
     "react-tex": "^1.5.0",
     "socket.io-client": "^4.4.1"
   },
