--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,3 @@
-SERVER_URL=http://localhost:5000
+NEXT_PUBLIC_CLIENT_URL=http://192.168.1.40:3000
+NEXT_PUBLIC_SERVER_URL=http://192.168.1.40:5000
+NEXT_PUBLIC_SERVER_SOCKET_URL=http://192.168.1.40:5000
