--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bigheads/core": "^0.3.3",
     "axios": "^0.26.1",
     "clsx": "^1.1.1",
     "dompurify": "^2.3.8",
